methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:25: error: ';' expected but ')' found.
  leveBrosse)()
            ^